update env var PORT and add STRIPE KEY

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ CLOUDINARY_NAME= # seu cloudinary name aqui #
 CLOUDINARY_API_KEY= # sua key aqui #
 CLOUDINARY_API_SECRET= # seu secret aqui #
 MONGODB_URI= # seu servidor mongo aqui #
-EXPRESS_PORT=1234
+PORT=1234
 REACT_APP_URL= # seu app react aqui #
+STRIPE_API_KEY=s # sua stripe key aqui #
